부산대 BE_박혜연 3주차 과제(1단계) (#127)
* docs: README.md

* feat: 로그확인 옵션 추가

* refactor: (users)entity & repository구현 및 코드수정

* refactor: (Product)entity & repository구현 및 코드수정 + UserDTO추가

* refactor: (WishList)entity & repository구현 및 코드수정

* test: JPA test

* refactor: 멘토님 피드백 반영

* refactor: 멘토님 피드백 반영